<resources>
    <string name="app_name">BaleKulkul Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Kalender Bali</string>
    <string name="title_section2">Kamus</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="language_name" comment="The localized language name of this translation, e.g. Deutsch if this the German translation.">LOCALIZED_NAME_OF_THIS_LANGUAGE</string>
    <string name="title_user_interface_translator" comment="The name/e-mail/website of the translator (that's probably you), it will appear on the about screen; leave empty if you don't want to be mentioned">USER_INTERFACE_TRANSLATOR_NAME</string>
    <string name="no_files">No files found.</string>
    <string name="to_top">/ (top)</string>
    <string name="to_upper_level">.. (up)</string>
    <string name="to_sdcard">/sdcard</string>
    <string name="title_please_wait">Please wait</string>
    <string name="msg_searching">Searching…</string>
    <string name="copy_all">Copy all</string>
    <string name="copy_word">Copy: %1$s</string>
    <string name="not_found">not found</string>
    <string name="no_included_dictionaries">No included dictionaries found.\n\nTap here to download one.</string>
    <string name="no_starred_words">No starred words found.\n\nTap the star icon of a dictionary entry to star it.</string>
    <string name="starred_words_current_dictionary">Current: %1$d</string>
    <string name="starred_words_all_dictionaries">All: %1$d</string>
    <string name="no_recent_dictionaries">No recently loaded dictionaries found.\n\nTap here to download one.</string>
    <string name="loading_download_dictionaries">Please wait.\n\nLoading available dictionaries…</string>
    <string name="no_download_dictionaries">Sorry, there are currently no dictionaries available for download.</string>
    <string name="msg_error_downloading_available_dictionaries">An error occurred while downloading the list of available dictionaries.\n\n\nTap here to try again.\n\n\nDetails:\n%1$s</string>
    <string name="msg_error_dictionary_not_found">The dictionary with the id %1$d is currently not available.</string>
    <string name="msg_error_accessing_storage">External storage is not accessible. Please make sure your device is not connected via USB.\n\nCurrent storage state: %1$s</string>
    <string name="msg_suggest_update">Your version of DictionaryForMIDs is outdated. Please update before downloading dictionaries.\nUpdate now?</string>
    <string name="msg_suggest_update_with_message">Your version of DictionaryForMIDs is outdated. Please update before downloading dictionaries.\nUpdate now?\n\nDetails: %1$s</string>
    <string name="msg_confirm_installation">Download and install \"%1$s\" dictionary?\nSize: unknown</string>
    <string name="msg_confirm_installation_size">Download and install \"%1$s\" dictionary?\nSize: %2$s</string>
    <string name="msg_installation_exception">Exception while installing:\n%1$s</string>
    <string name="msg_installation_exception_cause">Exception while installing:\n%1$s\n\nCause:\n%1$s</string>
    <string name="msg_installation_already_started">Sorry, an installation is already active.</string>
    <string name="msg_installation_started">Installation may take a while, you can continue to use the application.</string>
    <string name="msg_auto_installation_started">Downloading \"%1$s\" dictionary, this may take a while.\n\nYou can exit the application now, the progress is shown in the status bar.</string>
    <string name="msg_installation_finished">Dictionary installed!</string>
    <string name="msg_list_already_downloaded">List is already being downloaded.</string>
    <string name="msg_installation_error">Installation error</string>
    <string name="msg_external_storage_inaccessible">External storage is currently inaccessible.</string>
    <string name="msg_exported_starred_words">Successfully exported words to external storage.</string>
    <string name="msg_error_parsing_integer_preference">Sorry, could not recognize number. Reverted value to default.</string>
    <string name="title_exception">Exception</string>
    <string name="title_activity_starred_words">Starred Words</string>
    <string name="exception_failed_create_directory">Failed to create directory: %1$s</string>
    <string name="exception_failed_create_file">Failed to create file: %1$s</string>
    <string name="exception_failed_delete_file">Failed to remove file: %1$s</string>
    <string name="title_installation_finished">Finished</string>
    <string name="msg_successfully_installed_dictionary">Successfully installed dictionary.</string>
    <string name="msg_installation_complete">Installation complete</string>
    <string name="title_installation_status">Installation status</string>
    <string name="msg_installing_dictionary">Installing dictionary…</string>
    <string name="msg_installation_aborted">Installation aborted by user.</string>
    <string name="msg_installation_status">Status: %1$.2f%%</string>
    <string name="msg_compressed_entry_not_found">In archive \"%1$s\" there was no entry matching the following pattern \"%2$s\"</string>
    <string name="unit_byte">B</string>
    <string name="unit_kilo_byte">KB</string>
    <string name="unit_mega_byte">MB</string>
    <string name="unit_giga_byte">GB</string>
    <string name="file_size">%1$.2f %2$s</string>
    <string name="results_found_maximum">More than %1$d (maximum) results found.</string>
    <string name="results_found_cancel">%1$d result(s) found before canceling.</string>
    <string name="results_found_timeout">%1$d result(s) found before timeout.</string>
    <string name="results_found">%1$d results found.</string>
    <string name="results_found_one">1 result found.</string>
    <string name="no_results_found">Sorry, no results found.</string>
    <string-array name="font_sizes">
        <item>10sp</item>
        <item>11sp</item>
        <item>12sp</item>
        <item>13sp</item>
        <item>14sp</item>
        <item>15sp</item>
        <item>16sp</item>
        <item>17sp</item>
        <item>18sp</item>
        <item>19sp</item>
        <item>20sp</item>
        <item>21sp</item>
        <item>22sp</item>
        <item>23sp</item>
        <item>24sp</item>
        <item>25sp</item>
        <item>26sp</item>
    </string-array>
    <string-array name="themes">
        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="title_translation_error">Translation error occurred.</string>
    <string name="msg_translation_error">Details:\n\n%1$s</string>
    <string name="msg_translation_cancelled">Translation canceled.</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_export_all_starred">Export all</string>
    <string name="menu_download_dictionaries">Manually download…</string>
    <string name="menu_find_hidden_dictionaries">Re-add hidden</string>
    <string name="menu_clear_recent_dictionary_list">Clear recent…</string>
    <string name="msg_enter_word_first">Please enter a word first.</string>
    <string name="menu_reload_dictionary_list">Reload list</string>
    <string name="menu_cancel_installation">Cancel installation</string>
    <string name="menu_reinstall_default_dictionary">Re-install default dictionary</string>
    <string name="msg_load_dictionary_first">Please load a dictionary first.</string>
    <string name="msg_reload_dictionary">Please reload the dictionary.</string>
    <string name="msg_exception">Exception occurred:\n%1$s</string>
    <string name="msg_restart_app_after_settings_changed">Restart the application for settings to take effect.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_do_not_show_again">Do not show again</string>
    <string name="button_exit">Exit</string>
    <string name="msg_download_dictionaries">Downloading a dictionary involves 4 steps (the following assumes you have a file manager like Astro installed):\n\n1.Choose and download a dictionary on the website that is opened after confirming this dialog. Note: Only dictionaries of version 2.4.4 or higher are supported.\n\n2.Extract the zip-file\'s content to a directory on your SD-card (e.g. using Astro).\n\n3.Optional: Extract the included jar-file\'s content onto your SD-card for faster look-ups.\n\n4.Select the dictionary in the previously shown dialog.\n\nAlternatively, you could download and extract the dictionary using your PC, then transfer the files to your sd-card.</string>
    <string name="msg_clear_recent_dictionaries_list">Clear list of recent dictionaries?</string>
    <string name="msg_cancel_installation">Cancel current installation?</string>
    <string name="msg_load_dictionary">Load new dictionary now?\n\nYou can always load it later from the list of recent dictionaries.</string>
    <string name="button_load_dictionary_from_current_directory">Load dictionary from current directory</string>
    <string name="msg_dictionary_error">Dictionary error</string>
    <string name="msg_dictionary_not_found">Dictionary could not be loaded.\n\nYou can select a dictionary on the following dialog.</string>
    <string name="msg_dictionary_load_error">Error while loading dictionary.</string>
    <string name="msg_internal_dictionary_load_error">Error while loading internal dictionaries.\n\n%1$s</string>
    <string name="title_current_path">&gt; %1$s</string>
    <string name="msg_no_dictionary">Selected item does not look like a dictionary.</string>
    <string name="title_load_dictionary">Load Dictionary…</string>
    <string name="msg_auto_install">It looks like you have not yet installed your default dictionary.\n\nWould you like to download and install it now?</string>
    <string name="title_format_translation_direction">%1$s\t&#8594;\t%2$s</string>
    <string name="title_load_dictionary_first">Please load dictionary first.</string>
    <string name="title_about_heading">Java application DictonaryForMIDs</string>
    <string name="title_about_copyright_owner">Copyright by Gert Nuber (dict@kugihan.de), Achim Weimert (axw.dev@gmail.com) and other contributors.</string>
    <string name="attribute_url">http://dictionarymid.sourceforge.net/android.html</string>
    <string name="attribute_dictionary_list_url">http://dictionarymid.sourceforge.net/ota.php?p=%1$d&amp;v=%2$s</string>
    <string name="default_rabiulawal">Rabiulawal</string>
    <string name="default_capjigwe">Cap Ji Gwe</string>
    <string name="default_urip">Urip = 5 + 8</string>
    <string name="default_pasah">Pasah</string>
    <string name="default_tungleh">Tungleh</string>
    <string name="default_duka">Duka</string>
    <string name="default_kala">Kala</string>
    <string name="default_tanggal">26</string>
    <string name="default_25">25</string>
    <string name="default_26">26</string>
    <string name="default_mina">Mina</string>
    <string name="default_kliwon">Kliwon</string>
    <string name="default_jaya">Jaya</string>
    <string name="default_11">11</string>
    <string name="default_pepet">Pepet</string>
    <string name="default_ogan">Ogan</string>
    <string name="default_watek">Watek : Buta - Uler</string>
    <string name="default_lintang">Lawean</string>
    <string name="default_rasi">6. Kumba Rasi</string>
    <string name="default_sasih">Sasih Kepitu</string>
    <string name="purnama">Purnama</string>
</resources>